2008-08-04  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #249844

	* gui/component/addressbook-component.c
	(impl__get_userCreatableItems): 
	Use C_() macro instead of Q_() macro. 
	Use fully qualified names for "New" submenu entries. 

2008-08-02  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #546057

	* gui/component/GNOME_Evolution_Addressbook.server.in.in:
	* gui/contact-list-editor/contact-list-editor.glade:
	Use "x-office-address-book" icon name instead of "stock_addressbook".

2008-07-30  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #211267

	* printing/e-contact-print.c: (struct _EContactPrintContext),
	(e_contact_print_letter_heading), (e_contact_start_new_page),
	(e_contact_print_contact), (contact_draw_page),
	(e_contact_print): Report correct number of pages to print
	and print them as requested.

2008-07-30  Takao Fujiwara  <takao.fujiwara@sun.com>

	Reviewed by Andre Klapper <a9016009@gmx.de>

	** Fix for bug #545300

	* gui/merging/eab-contact-duplicate-detected.glade:
	Add a translatable tag in "_Merge" string.

2008-07-28  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #544383

	* gui/contact-list-editor/e-contact-list-editor.c:
	(e_contact_list_editor_get_contact): Put list members in reverse order,
	because 'e_vcard_add_attribute' uses prepend, thus changes order on
	every single save of the contact list.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* addressbook.error.xml: Fix some strings. See bug #543753.

2008-07-13  Keith Packard  <keithp@keithp.com>

	** Fix for bug #541355

	* conduit/address-conduit.c:
	The pilot link code does call free_match on data returned from the 
	for_each method, which the evolution conduits aren't prepared to 
	handle. This patch removes any freed objects from the 'locals' list in 
	each conduit which otherwise frees them again when the conduit is closed.

2008-07-09  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #228725
