@@ -1,3 +1,13 @@
+2008-08-06  Milan Crha  <mcrha@redhat.com>
+
+	** Fix for bug #546263
+
+	* gui/widgets/e-minicard.c: (add_field), (add_email_field), (remodel):
+	Add 'width' property as the last one for 'new' item, thus it will know
+	all the information to properly calculate column widths. Also don't
+	set field names for the contact-lists. Both changes prevents messing
+	of minicard painting for changed contact-lists.
+
 2008-08-04  Matthew Barnes  <mbarnes@redhat.com>
 
 	** Fixes bug #249844
